# claw-code-rust

./: AGENTS.md  Cargo.toml  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.tr.md  README.zh-CN.md  README.zh-TW.md  progress.txt
.github/workflows/: ci.yml  release.yml
claw-code-rust/notifications/: author-attitude.json  github-activity.jsonl  github-meta.json
crates/agent-core/src/: message.rs  query.rs  session.rs
crates/agent-provider/src/: anthropic.rs
crates/agent-tools/src/: orchestrator.rs
crates/claude-cli/src/: main.rs
crates/cli/src/: agent.rs  agent_command.rs  config.rs  (+4 more)
crates/core/: Cargo.toml  models.json
crates/provider/: Cargo.toml
crates/server/: Cargo.toml
crates/server/src/: bootstrap.rs  db.rs  execution.rs  lib.rs  main.rs  persistence.rs  projection.rs  provider_config.rs  runtime.rs  session.rs  titles.rs  transport.rs  turn.rs
crates/server/tests/: end_to_end.rs  persistence_resume.rs  protocol_contract.rs  skills_integration.rs
crates/tools/: README.md
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  app_command.rs  app_event.rs  app_event_sender.rs  chatwidget.rs  chatwidget_tests.rs  custom_terminal.rs  events.rs  history_cell.rs  host.rs  input.rs  lib.rs  onboarding.rs  render.rs  runtime.rs  selection.rs  slash.rs  slash_command.rs  state.rs  terminal.rs  tests.rs  theme.rs  tui.rs  worker.rs  worker_events.rs
crates/tui/src/bottom_pane/: app_link_view.rs  bottom_pane_view.rs  chat_composer.rs  command_popup.rs  file_search_popup.rs  footer.rs  list_selection_view.rs  mod.rs  multi_select_picker.rs  onboarding_view.rs  pending_input_preview.rs  selection_popup_common.rs  skill_popup.rs  theme_picker.rs
crates/tui/src/render/: composer.rs  layout.rs  markdown.rs  mod.rs  theme.rs  transcript.rs
crates/tui/src/streaming/: controller.rs
crates/tui/src/tui/: event_stream.rs
crates/tui/src/v2/: chatwidget.rs  host.rs
crates/tui/src/v2/bottom_pane/: chat_composer.rs  mod.rs  textarea.rs
crates/tui/src/v2/render/: highlight.rs
docs/: spec-app-config.md  spec-interactive-tui-v2.md
goal/: goal.md  query-runtime.md
notifications/: github-meta.json
(+81 files in other folders)
