[package]
description = "Transport-neutral runtime protocol types and server contracts"
edition.workspace = true
license.workspace = true
name = "devo-server"
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
devo-client = { workspace = true }
devo-core = { workspace = true }
devo-protocol = { workspace = true }
devo-provider = { workspace = true }
devo-safety = { workspace = true }
devo-tools = { workspace = true }
devo-utils = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.28"
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
pretty_assertions = "1"
tempfile = "3"
